--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.1",
     "fuse.js": "^7.1.0",
     "moment": "^2.30.1",
+    "node-persist": "^4.0.4",
     "stremio-addon-sdk": "^1.6.10",
     "uuid": "^11.1.0"
   },
