--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app,js",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
@@ -11,7 +11,6 @@
     "dotenv": "^17.2.1",
     "fuse.js": "^7.1.0",
     "moment": "^2.30.1",
-    "node-persist": "^4.0.4",
     "stremio-addon-sdk": "^1.6.10",
     "uuid": "^11.1.0"
   },
