--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "org.animaze.addon",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "name": "Animaze",
-  "description": "Animaze curates and updates a weekly list of top anime from Anilist, Ranker, and Whats-on-Netflix—bringing fans the most popular series from trusted sources.",
+  "description": "Animaze curates and updates a weekly list of top anime from Anilist, Ranker bringing fans the most popular series from trusted sources.",
   "logo": "https://i.imghippo.com/files/ziCn5406KAo.png",
   "icon": "https://i.imghippo.com/files/ziCn5406KAo.png",
   "author": "saky.alpha@gmail.com",
@@ -50,11 +50,6 @@
       "type": "series",
       "id": "upcoming-anilist",
       "name": "Upcoming Anime - Anilist"
-    },
-    {
-      "type": "series",
-      "id": "top-netflix-originals",
-      "name": "Top Netflix Originals - Netflix"
     }
   ],
   "behaviorHints": {
@@ -97,11 +92,6 @@
       "key": "upcoming-anilist",
       "type": "checkbox",
       "title": "Upcoming Anime - Anilist"
-    },
-    {
-      "key": "top-netflix-originals",
-      "type": "checkbox",
-      "title": "Top Netflix Originals - Netflix"
     }
   ]
 }
