--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.10.0",
     "dotenv": "^17.2.1",
     "fuse.js": "^7.1.0",
+    "geoip-lite": "^1.4.10",
     "moment": "^2.30.1",
+    "request-ip": "^3.3.0",
     "stremio-addon-sdk": "^1.6.10",
     "uuid": "^11.1.0"
   },
